hopefully fixed overflow of text in swiper

--- a/MyWeb/DarkMode.css
+++ b/MyWeb/DarkMode.css
@@ -421,6 +421,12 @@ nav ul li a{
         flex-wrap: wrap-reverse;
     }
 
+    .slideContent .slideText{
+
+        margin-top: -4rem;
+
+    }
+
 }
 
 .slideContent .slideText{
